# Crusty

./: .gitignore  Cargo.toml  README.md  RUST_CHEATSHEET.md  TODO.md
docs/: TODO.md  backlog-phase4-rust-review.md  backlog-phase4-security-review.md  backlog-phase56-combined-review.md
src/: config.rs  main.rs
src/player/: audio.rs  mod.rs  queue.rs
src/services/: cache_store.rs  download.rs  feed.rs  mod.rs  persistence.rs  playlist.rs
src/ui/: actions.rs  app.rs  input.rs  mod.rs  navigation.rs  playback.rs  state.rs
src/ui/views/: cache_stats.rs  feed.rs  help.rs  history.rs  login.rs  mod.rs  player_bar.rs  playlist.rs  queue.rs  search.rs
src/youtube/: auth.rs  browser_auth.rs  extractor.rs  mod.rs
