[package]
name = "crusty"
version = "0.1.0"
edition = "2021"
authors = ["Newid"]
description = "A terminal-based music player that downloads playlist from YouTube"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# Audio playback
rodio = "0.22"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# YouTube data extraction (we'll use yt-dlp via subprocess)
# Alternative: rustube = "0.6" (pure Rust, but may be less feature-complete)

# Logging (optional, useful for debugging)
tracing = "0.1"
tracing-subscriber = "0.3"

# Directory paths (for config storage)
dirs = "5.0"

# Regex for title cleaning
regex = "1.10"

# No longer needed - we use browser cookies instead of OAuth

# Atomic file writes (write to temp, then rename — prevents torn files on crash)
tempfile = "3.10"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
